--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2404,7 +2404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2413,7 +2413,7 @@
        "<AxesSubplot:xlabel='date'>"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2435,7 +2435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2444,7 +2444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2520,7 +2520,7 @@
        "max         6.700000"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2532,7 +2532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2541,7 +2541,7 @@
        "[(9)]"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2553,7 +2553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2570,7 +2570,7 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2584,7 +2584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2593,7 +2593,7 @@
        "[(54.0, 85.0, 71.66378066378067)]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2607,7 +2607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2628,7 +2628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2660,7 +2660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2669,7 +2669,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2693,7 +2693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2702,7 +2702,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2724,7 +2724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2733,7 +2733,7 @@
        "<AxesSubplot:ylabel='Frequency'>"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2755,12 +2755,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(69.0, 76.48239436619718, 82.0)]\n"
+     ]
+    }
+   ],
    "source": [
     "# Write a function called `calc_temps` that will accept start date and end date in the format '%Y-%m-%d' \n",
-    "# and return the minimum, average, and maximum temperatures for that range of dates\n"
+    "# and return the minimum, average, and maximum temperatures for that range of dates\n",
+    "def calc_temps(start_date, end_date):\n",
+    "    return session.query(func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)).\\\n",
+    "        filter(Measurement.date >= start_date).filter(Measurement.date <= end_date).all()\n",
+    "print(calc_temps('2016-06-07', '2016-07-20'))"
    ]
   },
   {
